@@ -65,6 +65,10 @@ sub read {
 
 sub write {
   my ( $self, $buf ) = @_;
+
+  utf8::encode($buf)
+    if Rex::Config->get_write_utf8_files && utf8::is_utf8($buf);
+
   my $sftp = Rex::get_sftp();
   $sftp->write( $self->{fh}, $buf );
 }
